[package]
name = "drop-bin"
version = "0.2.1"
edition = "2021"
description = "Defer running expensive destructors until later"
readme = "README.md"
repository = "https://github.com/SabrinaJewson/drop-bin.rs"
license = "MIT OR Apache-2.0"
keywords = ["drop", "destructor"]
categories = ["data-structures", "memory-management", "rust-patterns"]

[dev-dependencies]
criterion = "0.3"
defer-drop = "1.0.1"

[[bench]]
name = "drop_expensive"
harness = false

[dependencies]
try-mutex = "0.3.0"
try-rwlock = "0.1.0"
